# ws_2026

./: README.md
imagery_processing/: package.xml  setup.cfg  setup.py
imagery_processing/imagery_processing/: marker_recognition.py  marker_recognition_kalman_explanation.md
launch_package/: package.xml  setup.cfg  setup.py
launch_package/launch/: detect_with_bag.launch.py
multirotor/: CMakeLists.txt  package.xml
multirotor/src/: land_test.cpp
